# merkle-tree-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: merkle_tree_bench.rs
examples/: basic_usage.rs  debug_detailed.rs  debug_four.rs
src/: error.rs  hasher.rs  lib.rs  merkle_tree.rs  proof.rs  sparse.rs
tests/: integration_tests.rs
