[package]
name = "merkle-tree-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A production-ready Merkle tree library in Rust with proof generation/verification and generic hash support"
license = "MIT"
repository = "https://github.com/Peponks9/merkle-tree-rs"
keywords = ["merkle", "tree", "cryptography", "blockchain", "proof"]
categories = ["cryptography", "data-structures"]

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["serde"]
serde = ["dep:serde"]

[[bench]]
name = "merkle_tree_bench"
harness = false

[lib]
name = "merkle_tree"
path = "src/lib.rs"
